# people-counter

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.example.yaml  logrotate.conf  people-counter-reset.service  people-counter-reset.timer  people-counter.service  wifi-monitor.service
docs/: setup-guide.md
infra/cloudformation/: people-counter.yaml
scripts/: calibrate.py  charuco_detect_live.py  compare_cameras.py  diagnose_depth.py  download_model.py  focus_assist.py  provision.py  setup_device.sh  verify_hardware.py
src/: main.py
src/cloud/: lambda_dedup.py
src/config/: loader.py
src/mqtt/: buffer.py  client.py
src/tracking/: counter.py  tracker.py
src/vision/: calibration.py  capture.py  depth.py  detect.py
src/wifi_ble/: ble_scan.py  dedup.py  hasher.py  wifi_probe.py
tests/: test_main.py  test_provision.py
tests/cloud/: test_lambda_dedup.py
tests/config/: test_loader.py
tests/mqtt/: test_buffer.py  test_client.py
tests/tracking/: test_counter.py  test_tracker.py
tests/vision/: test_calibration.py  test_capture.py  test_depth.py  test_detect.py
tests/wifi_ble/: test_ble_scan.py  test_dedup.py  test_hasher.py  test_wifi_probe.py
